--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
     "mongoose": "^4.1.6",
-    "mongoose-timestamp": "^0.4.0"
+    "mongoose-timestamp": "^0.4.0",
+    "winston": "^1.0.1"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "^0.10.0",
@@ -49,6 +50,7 @@
     "node": "0.12.x"
   },
   "scripts": {
-    "start": "node main.js"
+    "start": "node main.js",
+    "postinstall": "./node_modules/bower/bin/bower install"
   }
 }
