--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "country-data": "0.0.22",
     "express": "^4.13.1",
     "http-status": "^0.2.0",
+    "jade": "^1.11.0",
     "jwt-simple": "^0.3.1",
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
     "mongoose": "^4.1.6",
     "mongoose-timestamp": "^0.4.0",
+    "pm2": "^0.14.7",
     "winston": "^1.0.1"
   },
   "devDependencies": {
