--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,10 @@
   "name": "leave-management-application",
   "version": "1.0.0",
   "dependencies": {
-    "jquery": "2.1.4",
     "angular": "1.3.18",
+    "angular-notify": "~2.5.0",
+    "angular-ui-router": "0.2.15",
     "bootstrap": "3.3.5",
-    "angular-ui-router": "0.2.15"
+    "jquery": "2.1.4"
   }
 }
